# CHANGELOG
## [Unreleased]
### Changed
- Wheels are now built for Python 2 and 3
- JSON pipeline report is now saved to report.json.  This can be changed by
  supplying the report_name keyword argument to Pipeline.run().  Fixing the name
  makes automated reading data from the report later easier.


## [0.6.5] - 2016-11-08
### Added
- Values returned from pipelines are now recorded


## [0.6.4] - 2016-11-02
### Added
- A recorder that sends a message to Slack is now included
- Multiple recorders may now be used

### Changed
- Printed output from commands is now stripped of whitespace before recording


## [0.6.3] - 2016-10-26
### Added
- The command argument to call() is now recorded along with the output


## [0.6.2] - 2016-09-22
### Added
- The pipeline record now includes information about the executing environment
- Pipelines can now accept input arguments that are not subclasses of artefacts.Artefact

### Changed
- Fix docstring errors
- Add more tests
- Tidy up documentation structure


## [0.6.1] - 2016-09-07
### Added
- The call() function now returns process output


## [0.6.0] - 2016-08-02
### Changed
- Use wrapt for the @record decorator
- Improve documentation


## [0.5.0] - 2016-04-27

Initial public release